[package]
name = "dioxus-form-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { path = "/home/bunny/my_stuff/projects/rust/dioxus/packages/dioxus/" }
dioxus-logger = "0.4.1"
dioxus-web = { path = "/home/bunny/my_stuff/projects/rust/dioxus/packages/web/" }
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"